# python-version-parser

./: .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
python_version_parser/: __main__.py
